# scrape-framework

./: .coverage  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: TESTING_PHASE.md
scrape_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: main.py
src/core/: config.py  exceptions.py  interfaces.py  pipeline.py
src/infrastructure/: http_client.py  logger.py  parser.py  storage.py
src/scrapers/: base_spider.py
tests/: conftest.py
tests/fixtures/: sample_html.py
tests/integration/: test_full_pipeline.py
tests/unit/: test_core.py  test_parser.py
